[gd_scene load_steps=5 format=3 uid="uid://w72v68wkdo4p"]

[ext_resource type="Script" path="res://scripts/game/cards/clergy_card.gd" id="1_6r0xg"]
[ext_resource type="FontFile" uid="uid://cqxld14ctgocv" path="res://assets/fonts/MedulaOne.ttf" id="2_g5h1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ip0y6"]
bg_color = Color(0.698039, 0.235294, 0.25098, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_0q1lr"]
Panel/styles/panel = SubResource("StyleBoxFlat_ip0y6")

[node name="Clergy_Card" type="Panel"]
custom_minimum_size = Vector2(325, 400)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1080.0
offset_right = -635.0
offset_bottom = -680.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = SubResource("Theme_0q1lr")
script = ExtResource("1_6r0xg")

[node name="Clergy_Card_Vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -185.0
offset_right = 137.5
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Clergy_Header" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 70
text = "Clergy"
horizontal_alignment = 1

[node name="Clergy_TopDivider" type="ColorRect" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.996078, 0.827451, 0.709804, 1)

[node name="Clergy_Label1" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 50
text = "line1line1line1line1li"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Clergy_Label2" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 50
text = "line2line2line2line2li"
horizontal_alignment = 1

[node name="Clergy_Label3" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 50
text = "line3line3line3line3li"
horizontal_alignment = 1

[node name="Clergy_BotDivider" type="ColorRect" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.996078, 0.827451, 0.709804, 1)

[node name="Clergy_FxLabel1" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 50
text = "effectsEFFECTSeffec"
horizontal_alignment = 1

[node name="Clergy_FxLabel2" type="Label" parent="Clergy_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.827451, 0.709804, 1)
theme_override_fonts/font = ExtResource("2_g5h1h")
theme_override_font_sizes/font_size = 50
text = "effectsEFFECTSeffec"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 326.0
offset_bottom = 399.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
